--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,12 +1,11 @@
 .topbar{
     width: 100%;
     height: 70px;
-    background-color: white;
     
-    position: fixed;
+    
+     
     top: 0;
-    z-index: 3;
-    transition: all 1s ease;
+  
 }
 .wrapper{
         padding: 10px 30px;
@@ -23,7 +22,19 @@
                  
                 width: 200px;
                 color: inherit;
-                padding-left: 10px;
+                padding-left: 50px;
                 margin-right: 40px;
-
-            }
+}
+.item-container{
+    display: flex;
+    align-items: center;
+    margin-left: 30px;
+}
+.log-in{
+    margin-right: 20px;
+    text-decoration: none;
+}
+.sign-up{
+    margin-right: 20px;
+    text-decoration: none;
+}
