--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -1,5 +1,6 @@
-/* .background-image{
+.background-image{
     background-image: url(../../images/bannerbackground.png);
     height: 100vh;
     width: 100%;
-}   */
+    
+}  
