--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -34,6 +34,7 @@
     margin-right: 20px;
     text-decoration: none;
     color: black;
+    padding-left: 50px;
 }
 .sign-up{
     margin-right: 20px;
