--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -2,5 +2,5 @@
     background-image: url(../../images/bannerbackground.png);
     height: 100vh;
     width: 100%;
-    
+    flex-direction: column;
 }  
