--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -25,6 +25,9 @@
                 padding-left: 50px;
                 margin-right: 40px;
 }
+/* .cart{
+    width: 25%;
+} */
 .item-container{
     display: flex;
     align-items: center;
@@ -35,6 +38,9 @@
     text-decoration: none;
     color: black;
     padding-left: 50px;
+}
+.log-in:hover{
+    color: black;
 }
 .sign-up{
     margin-right: 20px;
